# CS1-variable-name-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/CS1_variable_name_analysis/: analyze.py  plot_ecdf.py
