[project]
name = "CS1_variable_name_analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.4.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "rich>=15.0.0",
    "seaborn>=0.13.2",
]

[tool.uv]
package = true

[project.scripts]
analyze = "CS1_variable_name_analysis:analyze.main"
plot_ecdf = "CS1_variable_name_analysis:plot_ecdf.main"
